# kiran-session-manager

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.en.md  README.md  config.h.in
cmake/: FindKSM.cmake  ksm_macros.cmake  ksm_variables.cmake
data/: 90-lightdm-kiran-greeter.conf  CMakeLists.txt  blacklist_autostart_apps.txt  com.kylinsec.Kiran.SessionManager.IdleMonitor.xml  com.kylinsec.kiran.session-manager.gschema.xml.in  exit-query.ui  inhibitor-row.ui  kiran-greeter.desktop.in  kiran-session-idlemonitor.desktop.in  kiran-session-kwayland.in  kiran-session-manager.gresource.xml  kiran-session-wayland.in  kiran-wayland.desktop.in  kiran.desktop.in  ksm-quit-dialog.ui  ksm-quit-dialog.ui~  main.css  org.gnome.SessionManager.ClientPrivate.xml  xsession-errors.logrotate
data/sessions/: kiran-greeter.session  kiran-wayland.session  kiran.session
include/: ksm-error-i.h  ksm-i.h
lib/: CMakeLists.txt  base.h  def.h  error.cpp  error.h  stl-helper.h  str-utils.cpp  str-utils.h
lib/base/: CMakeLists.txt  base.h  def.h  error.cpp  error.h  str-utils.cpp  str-utils.h
lib/dbus/: CMakeLists.txt  display-manager.cpp  display-manager.h  screensaver.cpp  screensaver.h  systemd-login1.cpp  systemd-login1.h
po/: CMakeLists.txt  POTFILES.in  untitled.pot  zh_CN.po
resources/: resources.qrc
resources/styles/: kiran-session-window.qss
src/: CMakeLists.txt  app-manager.cpp  app-manager.h  app.cpp  app.h  idle-xalarm.cpp  idle-xalarm.h  inhibitor-manager.cpp  inhibitor-manager.h  inhibitors.cpp  inhibitors.h  ksm-app-manager.cpp  ksm-app-manager.h  ksm-app.cpp  ksm-app.h  ksm-idle-xalarm.cpp  ksm-idle-xalarm.h  ksm-inhibitors.cpp  ksm-inhibitors.h  ksm-manager.cpp  ksm-manager.h  ksm-power.cpp  ksm-power.h  ksm-presence.cpp  ksm-presence.h  ksm-quit-dialog.cpp  ksm-quit-dialog.h  ksm-utils.cpp  ksm-utils.h  ksm-xsmp-server.cpp  ksm-xsmp-server.h  main.cpp  org.gnome.SessionManager.Presence.xml  org.gnome.SessionManager.xml  power.cpp  power.h  presence.cpp  presence.h  quit-dialog.cpp  quit-dialog.h  (+6 more)
src/app/: app-manager.cpp  app-manager.h  app.cpp  app.h
src/client/: client-dbus.cpp  client-dbus.h  client-manager.cpp  client-manager.h  client-xsmp.cpp  client-xsmp.h  client.cpp  client.h  ksm-client-dbus.cpp  ksm-client-dbus.h  ksm-client-manager.cpp  ksm-client-manager.h  ksm-client-xsmp.cpp  ksm-client-xsmp.h  ksm-client.cpp  ksm-client.h
src/core/: CMakeLists.txt  display-server-monitor.cpp  display-server-monitor.h  inhibitor-manager.cpp  inhibitor-manager.h  main.cpp  power.cpp  power.h  presence.cpp  presence.h  session-manager.cpp  session-manager.h  signal-handler.cpp  signal-handler.h  utils.cpp  utils.h  xsmp-server.cpp  xsmp-server.h
src/core/app/: app-manager.cpp  app-manager.h  app.cpp  app.h
src/core/client/: client-dbus.cpp  client-dbus.h  client-manager.cpp  client-manager.h  client-xsmp.cpp  client-xsmp.h  client.cpp  client.h
src/idle/: CMakeLists.txt  idle-monitor.cpp  idle-monitor.h  main.cpp
src/tool/: CMakeLists.txt
src/tool/quit/: CMakeLists.txt  main.cpp
src/ui/: CMakeLists.txt  background-window.cpp  background-window.h  exit-query-window.cpp  exit-query-window.h  exit-query-window.ui  inhibitor-row.cpp  inhibitor-row.h  inhibitor-row.ui  main.cpp  screen-manager.cpp  screen-manager.h  ui-manager.cpp  ui-manager.h
src/wrapper/: display-manager.cpp  display-manager.h  ksm-display-manager.cpp  ksm-display-manager.h  ksm-screensaver.cpp  ksm-screensaver.h  ksm-systemd-login1.cpp  ksm-systemd-login1.h  screensaver.cpp  screensaver.h  systemd-login1.cpp  systemd-login1.h
test/: CMakeLists.txt
test/boot/: CMakeLists.txt  test-benchmark.cpp  test-benchmark.h
tool/quit/: CMakeLists.txt  main.cpp
translations/: CMakeLists.txt  POTFILES.in  bo_CN.po  kiran-session-manager.bo_CN.ts  kiran-session-manager.kk_KG.ts  kiran-session-manager.kk_KZ.ts  kiran-session-manager.mn_MN.ts  kiran-session-manager.ug_CN.ts  kiran-session-manager.zh_CN.ts  kiran-session-quit.zh_CN.ts  kiran-session-window.bo_CN.ts  kiran-session-window.kk_KG.ts  kiran-session-window.kk_KZ.ts  kiran-session-window.mn_MN.ts  kiran-session-window.ug_CN.ts  kiran-session-window.zh_CN.ts  kk_KG.po  kk_KZ.po  mn_MN.po  ug_CN.po  zh_CN.po
